resources/webidl2/test/invalid/baseline/stringconstants.txt
Syntax error at line 2, since `interface Util`:
  const DOMString hello = "world";
        ^ No type for const
